--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
   "scripts": {
     "start": "NODE_PATH=./build node build/index.js",
     "build": "npx tsc -p .",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "dev:debug": "nodemon --inspect src/index.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "celebrate": "^15.0.0",
+    "express": "^4.17.1",
+    "puppeteer": "^11.0.0",
+    "puppeteer-extra": "^3.2.3",
+    "puppeteer-extra-plugin-stealth": "^2.9.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/puppeteer": "^5.4.4",
     "nodemon": "^2.0.14",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
